# RoofLine_Plot

./: .gitignore  CMakeLists.txt  LICENSE  PROJECT_STATUS.md  README.md  WEEK1_RESULTS.md  bench.yaml  collect.py  plot_roofline.py  run.py  test_build.py
backends/cpu/: CMakeLists.txt  cpu_main.cpp  cpu_runner.cpp
backends/cuda/: CMakeLists.txt  cuda_runner.cpp
backends/metal/: CMakeLists.txt  metal_runner.mm
docs/: faq.md  overview.md
include/: kernel_launcher.hpp
plots/: .gitkeep
src/kernels/: hello_world.cu  saxpy.cu  saxpy.metal  triad.cu  triad.metal
src/utils/: timer.hpp
